# netcafe

./: CMakeLists.txt  readme.md
src/: clientmanager.cpp  filedata.cpp  main.cpp  table.cpp  types.cpp
src/include/: clientmanager.h  filedata.h  table.h  types.h
